--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -3,8 +3,8 @@
 A linguagem é a forma com que nós nos comunicamos, seja ela escrita ou
 falada. De fato, a linguagem é a forma como
 expressamos nossas idéias, sentimentos e experiências. O Processamento de
-Linguagem Natural, é o termo utilizado para descrever um software ou componente
-de hardware que tem como função analisar a linguagem escrita ou falada
+Linguagem Natural, é o termo que é utilizado para descrever um software ou
+componente de hardware que tem como função analisar a linguagem escrita ou falada
 \cite{jacksonmoulinier2007}.
 
 Existem duas abordagens para o Processamento de Linguagem Natural, sendo que a
@@ -37,13 +37,13 @@ outros usuários.
 Além disso, o usuário pode efetuar um voto de forma positiva, caso acredite que
 aquele \textit{link} é útil para a comunidade, ou um voto negativo em caso
 contrário.
-Uma vez que os próprios usuários podem submeter \textit{links}, os eventos e
+Uma vez que os próprios usuários podem submeter \textit{links}, os eventos e as
 notícias de todo o mundo são reportados no \textit{website}, como exemplo,
 pode-se citar as eleições ocorridas no ano de 2016 nos Estados Unidos e o
 tiroteio ocorrido em Paris em 15 de Novembro de 2015.
 
 Dentro deste contexto neste trabalho será desenvolvido um software que permita
-realizar a análise dos comentários do \textit{website} Reddit. Mais
+realizar a análise de comentários do \textit{website} Reddit. Mais
 especificamente, os comentários do Reddit serão analisados com o objetivo de
 identificar padrões de sentimentos dos usuários, ou seja, determinar se a
 opinião expressada com relação a um determinado tópico é neutra, positiva ou negativa.
@@ -68,18 +68,20 @@ trabalho, os seguintes objetivos específicos devem ser realizados:
 O presente trabalho está estruturado da seguinte forma: 
 \begin{itemize}
   \item No Capítulo \ref{cap:Processamento} será apresentado uma introdução ao
-  Processamento de Linguagem Natural, assim como uma introdução a métodos
-  estatísticos e simbólicos. 
+  Processamento de Linguagem Natural, além disso, serão apresentados exemplos de
+  métodos estatísticos e simbólicos para o processamento de linguagem natural
+  em geral.
   \item No Capítulo \ref{cap:Classificadores} será
-  apresentada uma descrição da análise de sentimentos, e métodos estatísticos e
-  simbólicos aplicados para a análise de sentimentos. Por fim, é apresentado o
-  método \ac{VADER} que é o método que será utilizado neste trabalho e também a
-  biblioteca \ac{NLTK} a qual implementa este método.
+  apresentada a análise de sentimentos e feita a descrição de métodos
+  estatísticos e simbólicos aplicados para a análise de sentimentos. Por fim, é apresentado o
+  método \ac{VADER} que é o método que será utilizado neste trabalho. Por fim,
+  será apresentada a biblioteca \ac{NLTK} que implementa este método de
+  \ac{VADER} e que será utilizado no desenvolvimento deste trabalho.
   \item O Capítulo \ref{cap:banco} tem
 o objetivo de descrever a base criada para o desenvolvimento do trabalho.
 Neste Capítulo é descrita a rede Reddit e os tópicos selecionados para a criação
-da base e a implementação desenvolvida para a extração dos comentários destes
-tópicos.
+da base. Além disso, é descrita a implementação desenvolvida para a extração dos
+comentários destes tópicos.
 \item No Capítulo \ref{cap:conclusao} temos as considerações parciais do
 trabalho, bem como o cronograma de andamento do mesmo.
 \end{itemize}
