--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -130,21 +130,22 @@ Banca examinadora:\par
 
 A sociedade tem cada vez mais se expressado através de Redes
 Sociais, sendo que entre essas se destaca o
-Reddit. De fato, essa é uma das maiores redes sociais no mundo, aonde os
-usuários postam \textit{links} e comentam sobre estes, gerando um grande volume
-de dados que muitas vezes são ignorados.
+Reddit. De fato, essa é uma das maiores redes sociais no mundo, com mais de 17
+milhões de usuários. Nesta, os usuários podem postar \textit{links}, bem como
+comentários sobre estes, gerando um grande volume de dados que muitas vezes são
+ignorados.
 
 A identificação de padrões de sentimentos expressos por grupos dessa comunidade,
 se torna útil visto que a partir dessa avaliação é possível construir
-ferramentas que apoiam decisões tanto de um ponto de vista político e econômico.
-Por exemplo, a partir desta é possível identificar a opinião dos usuários em
-relação a um candidato em uma eleição ou a aceitação dos consumidores de um novo
-produto.
+ferramentas que podem apoiar decisões do ponto de vista diversos pontos
+de vista, como político, econômico, etc. Por exemplo, a partir desta análise, é
+possível identificar a opinião dos usuários em relação a um candidato em uma eleição ou ainda a aceitação dos
+consumidores em relação a um novo produto.
 
-Assim, neste trabalho será desenvolvido um \textit{software} no qual seja
-possível efetuar a análise de sentimentos na rede social Reddit. Essa será
-desenvolvida utilizando o método de \ac{VADER}, através do \textit{framework}
-\ac{NLTK}.
+Assim, neste trabalho será desenvolvido um \textit{software} que permite efetuar
+a análise de sentimentos da rede social Reddit. Essa será desenvolvida
+utilizando o método de \ac{VADER}, que se encontra implementado no
+\textit{framework} \ac{NLTK}.
 
 \end{abstract}
 
@@ -153,19 +154,20 @@ Analysis}
 
 The society has been increasingly expressing themselves through social networks,
 which from among those, the one who stand out is Reddit. Indeed, this is one of
-the biggest social networks in the world, where the users send links and comment
-those, generating a big volume of data, which a lot of times get ignored.
+the biggest social networks in the world with more than 17 millions of users. At
+this, users can send links, as well as comment on these, generating a big volume
+of data, which a lot of times get ignored.
 
-The identification of sentiment patterns expressed by groups of that community
+The recognition of sentiment patterns expressed by groups of that community
 make itself useful because from that evaluation, is possible the build tools
-that support decisions in both political point of view, as well an economic
-point of view. For an example, with that, it is possible to identify the users's
-opinion regarding an election candidate or the costumers acceptance of a new
-product.
+that can support decisions from a number of point of views, like economic,
+political and etc. For an example, with that analysis, it is possible to
+identify the users's opinion regarding an election candidate or the costumers's
+acceptance of a new product.
 
 Therefore, in this work will be developed a software capable of performing a
 sentiment analysis on the Reddit social network. This will be developed using
-the \ac{VADER} method through the \ac{NLTK} \textit{framework}.
+the \ac{VADER} method which is implemented by the \ac{NLTK} \textit{framework}.
 
 \end{englishabstract}
 
@@ -180,7 +182,10 @@ the \ac{VADER} method through the \ac{NLTK} \textit{framework}.
 % \include{capitulos/capitulo6}
 % \include{capitulos/capitulo7}
 
+
 \bibliography{tcc}
 \bibliographystyle{abnt}
+
+\include{anexos/a}
 
 \end{document}
