--- a/tcc/capitulos/capitulo3.tex
+++ b/tcc/capitulos/capitulo3.tex
@@ -1,9 +1,9 @@
 \chapter{Criação de Base de Dados}
 \label{cap:banco}
-Este capítulo tem como objetivo apresentar a Rede Social Reddit na qual seu
-conteúdo foi extraído para a base de dados, os tópicos
-selecionados para a análise de sentimentos, e por fim, é apresentada a
-ferramenta desenvolvida para a extração dos tópicos e criação da base.
+Este capítulo tem como objetivo descrever sucintamente a rede social Reddit.
+Após são apresentados os tópicos que foram selecionados para a análise de
+sentimentos. Por fim, é apresentada a ferramenta desenvolvida para a extração
+dos comentários destes tópicos e para a criação da base.
 \section{Rede Social Reddit}
 \label{cap:Reddit}
 
@@ -14,7 +14,7 @@ Os usuários do Reddit podem enviar \textit{links} com conteúdos externos
 ao Reddit ou ainda mensagens de texto. A partir desse conteúdo, os seus
 usuários podem votar para cima (\textit{upvote}) ou para baixo \textit{downvote},
 influenciando na posição do conteúdo no \textit{website}. Além de votar no conteúdo, seus usuários podem enviar comentários como
-forma de expressar sua opinião.
+forma de expressar sua opinião (Figura \ref{fig:reddit}).
 
 \begin{figure}[!htbp]
 \centering
@@ -25,21 +25,21 @@ forma de expressar sua opinião.
 \end{figure}
 
 O conteúdo do Reddit é distribuído em \textit{subreddits} que funcionam como
-comunidades que abordam certos assuntos. Os usuários podem se inscrever nesses
+comunidades. Os usuários podem se inscrever nesses
 \textit{subreddits}, recebendo as atualizações na sua página inicial, sendo
-que dentre os \textit{subreddits}, destacam-se:
+que dentre esses \textit{subreddits}, destacam-se:
 
 
 \begin{itemize}
-  \item \textit{/r/AskReddit}: Esse \textit{subreddit} é utilizado para fazer
-  perguntas gerais para outros usuários. Esse \textit{subreddit} possui
-  aproximadamente 16.941.544 de inscritos.
-  \item \textit{/r/worldnews}: Esse \textit{subreddit} possui as notícias do
-  mundo. Contando, aproximadamente com 16.570.606 de inscritos.
+  \item \textit{/r/AskReddit}: esse \textit{subreddit} é utilizado para fazer
+  perguntas gerais para outros usuários do Reddit. Esse \textit{subreddit}
+  possui aproximadamente 16.941.544 inscritos.
+  \item \textit{/r/worldnews}: esse \textit{subreddit} possui as notícias de
+  todo o mundo, contando com aproximadamente 16.570.606 inscritos.
   \item \textit{/r/IAmA}: IAmA é um estilização de 'I am a' ('Eu sou um'):
   a partir desse \textit{subreddit} os usuários podem fazer perguntas ao criador
   de um determinado tópico. Esse \textit{subreddit} possui aproximadamente
-  16.990.161 de inscritos.
+  16.990.161 inscritos.
 \end{itemize}
 
 % Dentre esses \textit{subreddits} podemos destacar alguns dos tópicos mais
@@ -71,14 +71,16 @@ que dentre os \textit{subreddits}, destacam-se:
 \section{Extração de Dados}
 \label{cap:Extracao}
 
-Para a extração dos dados e criação da base foi
-criado um \textit{crawler} ou robô de navegação. Esse robô foi desenvolvido na
-linguagem Java e tem como objetivo a navegação automática no conteúdo do
-\textit{website} Reddit, extraindo os dados e comentários referentes a um
+Para a extração comentários do \textit{website} Reddit e para a criação da base
+foi desenvolvido um \textit{crawler} ou robô de navegação. Esse robô foi
+implementado na linguagem Java e tem como objetivo a navegação automática no
+conteúdo do \textit{website} Reddit, extraindo os dados e comentários referentes a um
 determinado tópico. Após, os dados são armazenados em banco de dados MySQL
 \cite{Widenius:2002:MRM:560480}.
 Na Figura \ref{fig:crawler} tem-se a arquitetura do \textit{software}
-desenvolvido.
+desenvolvido. O código deste encontra-se no Anexo A.
+
+\newpage
 
 \begin{figure}[htbp]
 \centering
@@ -95,26 +97,27 @@ sufixo ``.json'' (Por exemplo:
 o \textit{website} retorna um objeto \ac{JSON}. Uma vez que o \ac{JSON}
 retornado pelo \textit{website} possui 68 campos e que esses não se encontram
 documentados, utilizou-se o \textit{website}
-jsonschema2pojo\footnote{http://www.jsonschema2pojo.org/} para converter o JSON
-retornado em um objeto \ac{POJO}. De fato, esse \textit{website} tem como
-objetivo a conversão de um esquema \ac{JSON} em \ac{POJO}, permitindo o
-\textit{download} da classe para a utilização.
+jsonschema2pojo\footnote{http://www.jsonschema2pojo.org/ - O \textit{website}
+jsonschema2pojo tem como objetivo a conversão de um esquema \ac{JSON} em \ac{POJO}, permitindo o
+\textit{download} da classe para a utilização.} para converter o
+JSON retornado em um objeto \ac{POJO}.
 
 Após, foi utilizado o \textit{framework} Hibernate
-\cite{Iverson:2004:HJD:1044870} para a criação de banco de dados, assim como
-persistência dos dados em um banco de dados MySQL, criando as tabelas
-\textit{RedditPost} e \textit{RedditThread}, relacionadas respectivamente com
-os comentários e o tópico em questão.
-O \textit{framework} Hibernate é um \textit{framework} de mapeamento objeto-relacional que tem como objetivo representar tabelas do
-banco de dados através de classes.
+\cite{Iverson:2004:HJD:1044870} para a criação do banco de dados e para a
+persistência dos dados. O Hibernate é um \textit{framework} de
+mapeamento objeto-relacional que tem como objetivo representar tabelas do banco
+de dados através de classes, ou seja, esse tem como principal característica a
+transformação das classes em Java para tabelas em um banco de dados relacional.
+No caso deste trabalho, ele é responsável pela criação das tabelas \textit{RedditPost} e
+\textit{RedditThread}, relacionadas respectivamente com os comentários e o
+tópico em questão. 
 
 \section{Tópicos Selecionados}
 
-Para análise de sentimentos e comparação dos resultados obtidos, foram
-selecionados 15 tópicos. Esses tópicos são os que apresentam maior número de
-comentários no último ano.
-
-Os 15 tópicos encontram-se distribuídos em diferentes assuntos, que são: cenário
+Para análise de sentimentos e para comparação dos resultados obtidos, foram
+selecionados 15 tópicos, sendo que esses tópicos são os que
+apresentam maior número de comentários no último ano. Destaca-se que os 15
+tópicos encontram-se distribuídos em diferentes assuntos, que são: cenário
 político nacional, cenário político internacional e tópicos diversos:
 
 No que diz respeito a tópicos relacionados com ao cenário político nacional, os
@@ -124,105 +127,108 @@ tópicos escolhidos foram:
   \item
   \textit{Brazil Seeks To Copy U.S. Gun Culture ``to allow embattled
   citizens the right to defend themselves from
-  criminals''}: esse encontra-se disponível em 
+  criminals''}: esse tópico encontra-se disponível em 
   \url{https://www.reddit.com/r/worldnews/comments/36ny58/brazil_blogger_known_for_reporting_on_corruption/}
-  e refere-se a intenção do Brasil de copiar a cultura de porte de armas dos
+  e refere-se a intenção do Brasil em adotar a cultura de porte de armas dos
   Estados Unidos da América.
   \item
-  \textit{Brazil descends into chaos as Olympics looms}: esse encontra-se disponível em 
+  \textit{Brazil descends into chaos as Olympics looms}: esse tópico encontra-se disponível em 
   \url{https://www.reddit.com/r/worldnews/comments/4bqcc3/brazil_descends_into_chaos_as_olympics_looms/}
-  e refere-se ao caos ocorrido nas Olímpiadas realizadas no Brasil.
+  e refere-se ao caos ocorrido nas Olímpiadas de 2016 que foram realizadas no
+  Brasil.
   \item
-  \textit{Plane carrying Brazil Supreme Court judge crashes into sea}: esse encontra-se disponível em
+  \textit{Plane carrying Brazil Supreme Court judge crashes into sea}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/5oyz3b/plane_carrying_brazil_supreme_court_judge_crashes/}
   e refere-se a queda do avião no qual o ministro Teori Zavascki estava abordo.
   \item
   \textit{Brazil passes Internet governance Bill: Brazil has made history with
   the approval of a post-Snowden Bill which sets out principles, rights and
-  guarantees for Internet users.}: esse encontra-se disponível em
+  guarantees for Internet users.}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/21f3as/brazil_passes_internet_governance_bill_brazil_has/}
   e refere-se a aprovação do Marco Civil da Internet.
   \item
   \textit{FIFA generated more than \$4 billion in sales from the 2014 World Cup,
   and is Giving Brazil \$100 Million After The Country Spent \$15 Billion On The
-  World Cup}: esse encontra-se disponível em
+  World Cup}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/2t65ql/fifa_generated_more_than_4_billion_in_sales_from/}
   e refere-se a diferença entre o que foi gasto e o que foi arrecadado pelo
   Brasil na Copa do Mundo de 2014.
  
 \end{itemize}
 
-Já os que se referem a política internacional são:
+Já os tópicos escolhidos que se referem a política internacional são:
 \begin{itemize}
   \item
   \textit{2.6 terabyte leak of Panamanian shell company data reveals "how a
   global industry led by major banks, legal firms, and asset management companies
   secretly manages the estates of politicians, Fifa officials, fraudsters and
   drug smugglers, celebrities and professional
-  athletes."}.: esse encontra-se disponível em
+  athletes."}.: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/4d75i7/26_terabyte_leak_of_panamanian_shell_company_data/}
-  e refere-se ao vazamento de um conjunto de documentos confidenciais de uma
-  sociedade de advogados panamenha fornecendo informações detalhadas de
-  empresas de paraísos fiscais.
+  e refere-se ao vazamento dos documentos confidenciais de uma
+  sociedade de advogados panamenha. Esses documentos apresentam informações
+  detalhadas de empresas localizadas em paraísos fiscais.
   \item
   \textit{Fidel Castro is dead at
-  90.}: esse encontra-se disponível em
+  90.}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/5exz2e/fidel_castro_is_dead_at_90/}
-  e refere-se a morte do presidente de Cuba, Fidel Castro.
+  e se refere a morte do presidente de Cuba, Fidel Castro.
   
   \item
   \textit{Donald Trump to strip all funding from State Dept team promoting
   women's rights around the world - Leaked plan comes as First Daughter Ivanka
-  defends her father's record with women}: esse encontra-se disponível em
+  defends her father's record with women}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/67ivae/donald_trump_to_strip_all_funding_from_state_dept/}
   e refere-se a decisão do presidente dos Estados Unidos da América, Donald
   Trump, em remover fundos de promoção ao direito das mulheres.
   
   \item
   \textit{Manchester Arena 'explosions': Two loud bangs heard at MEN Arena}:
-  esse encontra-se disponível em
+  esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/6cqdye/manchester_arena_explosions_two_loud_bangs_heard/}
-  e refere-se o atentado terrorista ocorrido na Manchester Arena (Inglaterra) em
-  23 de Maio de 2017.
+  e refere-se ao atentado terrorista ocorrido na Manchester Arena (Inglaterra)
+  em 23 de Maio de 2017.
   
   \item
   \textit{Sweden asks the U.S. to explain Trump comment on
-  Sweden}: esse encontra-se disponível em
+  Sweden}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/5uzetf/sweden_asks_the_us_to_explain_trump_comment_on/}
-  e refere-se os comentários feitos do presidente dos Estados Unidos da América, Donald
-  Trump, sobre a Suécia.
+  e se refere aos comentários feitos do presidente dos Estados Unidos da
+  América, Donald Trump, sobre a Suécia.
   
   \item\textit{“Canada will welcome you,” Trudeau invites refugees as Trump bans
-  them}: esse encontra-se disponível em
+  them}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/worldnews/comments/5qqa51/canada_will_welcome_you_trudeau_invites_refugees/}
   e refere-se a declaração do primeiro ministro canadense sobre decisão de
-  receber refugiados.
+  receber refugiados. Neste declaração, o primeiro ministro canadense afirma que
+  os refugiados serão bem-vindos no Canadá.
 \end{itemize}
 
 Por fim, os tópicos selecionados que abordam assuntos diversos foram:
 \begin{itemize}
   \item
   \textit{I’m Bill Gates, co-chair of the Bill \& Melinda Gates Foundation. Ask
-  Me Anything.}: esse encontra-se disponível em
+  Me Anything.}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/IAmA/comments/5whpqs/im_bill_gates_cochair_of_the_bill_melinda_gates/}
-  e refere-se a perguntas e respostas ao fundador da Microsoft, Bill Gates.
+  e refere-se as respostas às perguntas que foram feitas ao fundador da
+  Microsoft, Bill Gates.
   \item
-  \textit{Hey, it's Lars from Metallica. AMA}: esse encontra-se disponível em
+  \textit{Hey, it's Lars from Metallica. AMA}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/IAmA/comments/1wl9ic/hey_its_lars_from_metallica_ama/}.
-  Esse tópico apresenta perguntas e respostas do vocalista da banda de rock
-  Metallica, James Hetfield.
+  Esse tópico apresenta as respostas às perguntas realizadas ao vocalista da
+  banda de rock Metallica, James Hetfield.
   \item
   \textit{I'm the CEO of Renault and Nissan and we're making autonomous driving
-  vehicles happen by 2020. Ask me anything!}: esse encontra-se disponível em
+  vehicles happen by 2020. Ask me anything!}: esse tópico encontra-se disponível em
   \url{https://www.reddit.com/r/IAmA/comments/2s7obx/im_the_ceo_of_renault_and_nissan_and_were_making/}
-  e refere-se perguntas e respostas do diretor executivo da Renault e Nissan,
+  e refere-se as respostas às perguntas realizadas ao diretor executivo da Renault e Nissan,
   Carlos Ghosn.
   
   \item
   \textit{I am Julian Assange founder of WikiLeaks -- Ask Me Anything}: esse
-  encontra-se disponível em
+  tópico encontra-se disponível em
   \url{https://www.reddit.com/r/IAmA/comments/5n58sm/i_am_julian_assange_founder_of_wikileaks_ask_me/}
-  e refere-se perguntas e respostas de Julian Assange, fundador do
+  e refere-se as respostas às perguntas realizadas ao Julian Assange, fundador do
   \textit{WikiLeaks}.
   
 \end{itemize}
@@ -237,59 +243,52 @@ análise de sentimento.
 
 \chapter{Conclusão Parcial}
 \label{cap:conclusao}
-Como visto, o \ac{NLP} tem como objetivo a analise de linguagem natural, seja
+A \ac{NLP} tem como objetivo a análise de linguagem natural, seja
 essa escrita ou falada. Dentre diversas tarefas que ela executa, uma delas é a
 análise de sentimentos, a qual se faz útil visto que cada vez
 mais as pessoas se comunicam através de redes sociais, gerando um grande volume
 de dados. A análise e quantificação da opinião expressa por esses dados, seja
-por fins políticos, comerciais ou quaisquer outros, se torna díficil quando
-feita de forma manual por sua quantidade de dados.
+por fins políticos, comerciais ou quaisquer outros, se torna díficil devido a
+grande quantidade de dados.
 
-Através do estudo realizado, foram encontrados dois métodos de \ac{NLP}
-distintos, métodos simbólicos, os quais se baseiam em regras, como por exemplo o
-Método de Brill para análise léxica e estatísticos, como por exemplo a
-utilização de Modelos de Markov, que utilizam aprendizado supervisionado. Dentro
-da área do \ac{NLP} de análise de sentimentos, através da literatura, foram
-verificados os métodos estatísticos \ac{SVM}, \ac{MaxEnt} e Naive Bayes, os quais apresentam
-características e assertividade similar, a partir desses três foi
-selecionado o método Naive Bayes para estudo e comparação com um método
-simbólico. O método simbólico escolhido para estudo e comparação foi o
-\ac{VADER}, visto que foi desenvolvido específicamente para o funcionamento em
-redes sociais.
- 
-Através da literatura, foi verificado que o método \ac{VADER} se mostra superior
-ao Naive Bayes na utilização para a análise de sentimentos nas avaliações de
+Observou-se que os métodos mais utilizados para análise de sentimentos são o
+Método de Naive Bayes (estatístico) e o Método de \ac{VADER} (simbólico). Dentre
+estes, optou-se pela utilização do método de \ac{VADER}, uma vez que de acordo
+com a literatura, esse apresenta um desempenho superior ao método de Naive
+Bayes. De fato, esse mostrou-se superior na análise de sentimentos nas avaliações de
 produtos da Amazon, editoriais do New York Times e mais importante, na análise
-de \textit{Tweets} da rede social Twitter. A justificativa para isso, se dá ao
-fato de métodos estatísticos necessitarem de um \textit{training set}
+de \textit{Tweets} da rede social Twitter \cite{SentimentinSocialMedia}. A
+justificativa para isso, se dá ao fato de métodos estatísticos necessitarem de um \textit{training set}
 especializado para obter resultados similares ou superiores aos métodos
-simbólicos. Portanto, foi optado pelo método \ac{VADER}, visto que a não
-especialização do \textit{training set} impactaria na assertividade da análise
-de sentimentos e a especialização de um \textit{training set} para cada tema
-distinto se faz inviável devido a quantidade de temas abordados pela rede social
-Reddit. 
+simbólicos. 
 
-Para implementação do método \ac{VADER} foram verificadas diversas
-ferramentas, porém, somente o \ac{NLTK} apresentou uma implementação deste,
-visto que a utilização deste \textit{framework} facilitaria a execução da
-análise de sentimentos, não só por já conter a implementação do \ac{VADER}, mas
-também por conter outras implementações relacionadas com o \ac{NLP}, foi optada
-pela utilização deste.
+Além disso, optou-se pela utilização do método de \ac{VADER}, devido
+ao fato deste não necessitar da criação de um \textit{training set} específico
+para a análise de sentimentos. A necessidade da criação de um \textit{training
+set} específico para cada tema inviabilizaria o desenvolvimento deste trabalho,
+uma vez que neste serão analisados 15 tópicos com temas distintos.
+
+Para implementação do método \ac{VADER} optou-se pela biblioteca \ac{NLTK}. A
+utilização da biblioteca \ac{NLTK} permitirá a utilização futura de outros
+métodos de \ac{NLP}.
  
 Por fim, se fez necessária a criação de uma base de dados para armazenar os
-dados disponibilizados pelo Reddit, para isso, foi utilizado um banco de
-dados MySQL, o qual através de uma ferramenta desenvolvida utilizando a
-linguagem Java, elabora requisições para o Reddit e
-persiste as respostas obtidas no formato JSON através da biblioteca
-Hibernate. 
+tópicos e comentários disponibilizados pela rede social Reddit. Para isso, foi
+desenvolvido um \textit{crawler} (robô) que é responsável por extrair os
+comentários relacionados a um tópico na rede social Reddit e armazenar em um
+banco de dados MySQL. Esse robô foi desenvolvido na linguagem Java e utiliza a
+API da rede social Reddit para extrair as informações de um tópico. Após, ele
+utiliza o \textit{framework} Hibernate para armazenar os dados extraídos em uma
+base de dados relacional em um banco MySQL.
 
-Através da base de dados criada, assim como o \ac{NLTK}, deverá ser possível
-efetuar a análise de sentimentos na rede social Reddit com o objetivo de
-encontrar padrões entre usuários, comunidades e opiniões.
+Na segunda etapa deste trabalho, será utilizado o \textit{framework} \ac{NLTK}
+para efetuar a análise de sentimento sobre a base de dados criada com o objetivo
+de identificar padrões de sentimentos entre usuários e comunidades.
 
-\section{Atividade e Cronograma do TCC I}
+\section{Atividades e Cronograma}
 
-Atividades realizadas durante o TCC I:
+Na Tabela \ref{tab:tcc1} tem-se o cronongrama das atividades realizadas durante
+o TCC I.
 \begin{enumerate}
 \item Estudo de algoritmos para o processamento de texto e também análise de
 sentimentos.
@@ -300,9 +299,6 @@ sentimentos.
 \item Redação da monografia TCC I.
 \item Apresentação TCC I.
 \end{enumerate}
-
-As atividades realizadas podem ser observadas através da Tabela
-\ref{tab:tcc1}.
 
 \renewcommand{\arraystretch}{2}
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
@@ -327,9 +323,9 @@ As atividades realizadas podem ser observadas através da Tabela
 \label{tab:tcc1}
 \end{table}
 
-\section{Atividade e Cronograma do TCC II}
+Já na Tabela \ref{tab:tcc2} tem-se as atividades a serem desenvolvidas no TCC
+II:
 
-Atividades a serem desenvolvidas para a conclusão do TCC II:
 \begin{enumerate}
 \item Implementação do software de Processamento de Linguagem Natural para a
 análise de sentimentos na base de dados criada.
@@ -338,8 +334,6 @@ análise de sentimentos na base de dados criada.
 \item Apresentação do TCC II.
 \end{enumerate}
 
-As atividades realizadas podem ser observadas através da Tabela
-\ref{tab:tcc2}.
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
 \begin{table}[!htb]
 \begin{tabularx}{0.9\textwidth}{Y|Y|Y|Y|Y|Y|Y|Y|Y|Y|Y|}
