--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -343,3 +343,12 @@ author = {Pålsson, A., and Szerszen, D.},
  isbn = {0321268199},
  publisher = {Addison-Wesley Professional},
 } 
+
+@techreport{Rossum:1995:PRM:869369,
+ author = {Rossum, Guido},
+ title = {Python Reference Manual},
+ year = {1995},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Aercim_cwi%3Aercim.cwi%2F%2FCS-R9525},
+ publisher = {CWI (Centre for Mathematics and Computer Science)},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+} 
