--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -22,7 +22,7 @@
 \usepackage{adjustbox}
 \usepackage{amsmath}
 \usepackage{booktabs}
-\usepackage{textcomp}
+\usepackage{textcomp} 
 \usepackage{array}
 \usepackage{booktabs}
 \usepackage{xcolor}
@@ -137,13 +137,12 @@ ignorados.
 
 A identificação de padrões de sentimentos expressos por grupos dessa comunidade,
 se torna útil visto que a partir dessa avaliação é possível construir
-ferramentas que podem apoiar decisões do ponto de vista diversos pontos
-de vista, como político, econômico, etc. Por exemplo, a partir desta análise, é
+ferramentas que podem apoiar decisões do ponto de vista político, econômico, etc. Por exemplo, a partir desta análise, é
 possível identificar a opinião dos usuários em relação a um candidato em uma eleição ou ainda a aceitação dos
 consumidores em relação a um novo produto.
 
-Assim, neste trabalho será desenvolvido um \textit{software} que permite efetuar
-a análise de sentimentos da rede social Reddit. Essa será desenvolvida
+Assim, neste trabalho será desenvolvido um \textit{software} que permita efetuar
+a análise de sentimentos na rede social Reddit. Essa será desenvolvida
 utilizando o método de \ac{VADER}, que se encontra implementado no
 \textit{framework} \ac{NLTK}.
 
@@ -160,10 +159,9 @@ of data, which a lot of times get ignored.
 
 The recognition of sentiment patterns expressed by groups of that community
 make itself useful because from that evaluation, is possible the build tools
-that can support decisions from a number of point of views, like economic,
-political and etc. For an example, with that analysis, it is possible to
-identify the users's opinion regarding an election candidate or the costumers's
-acceptance of a new product.
+that can support decisions from an economic point of views, political
+point of view, etc. For an example, with that
+analysis, it is possible to identify the users's opinion regarding an election candidate or the costumers's acceptance of a new product.
 
 Therefore, in this work will be developed a software capable of performing a
 sentiment analysis on the Reddit social network. This will be developed using
@@ -185,7 +183,5 @@ the \ac{VADER} method which is implemented by the \ac{NLTK} \textit{framework}.
 
 \bibliography{tcc}
 \bibliographystyle{abnt}
-
-\include{anexos/a}
 
 \end{document}
