--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -67,18 +67,20 @@ trabalho, os seguintes objetivos específicos devem ser realizados:
 
 O presente trabalho está estruturado da seguinte forma: 
 \begin{itemize}
-  \item No Capítulo \ref{cap:Processamento} será apresentado uma introdução ao
-  Processamento de Linguagem Natural, além disso, serão apresentados exemplos de
+  \item No Capítulo \ref{cap:Processamento} é apresentada uma introdução ao
+  Processamento de Linguagem Natural. Além disso, são apresentados exemplos de
   métodos estatísticos e simbólicos para o processamento de linguagem natural
   em geral.
-  \item No Capítulo \ref{cap:Classificadores} será
-  apresentada a análise de sentimentos e feita a descrição de métodos
-  estatísticos e simbólicos aplicados para a análise de sentimentos. Por fim, é apresentado o
-  método \ac{VADER} que é o método que será utilizado neste trabalho. Por fim,
-  será apresentada a biblioteca \ac{NLTK} que implementa este método de
-  \ac{VADER} e que será utilizado no desenvolvimento deste trabalho.
+  \item No Capítulo \ref{cap:Classificadores} é
+  apresentada a análise de sentimentos e feita uma breve descrição de métodos
+  estatísticos e simbólicos que podem ser aplicados para a análise de
+  sentimentos. Após, é apresentado o método \ac{VADER}, que é o método que será
+  utilizado neste trabalho. Por fim, é apresentada a biblioteca \ac{NLTK} que implementa o método de
+  \ac{VADER} e que foi a biblioteca escolhida para o desenvolvimento do
+  trabalho.
   \item O Capítulo \ref{cap:banco} tem
-o objetivo de descrever a base criada para o desenvolvimento do trabalho.
+o objetivo de descrever a base de dados criada para o desenvolvimento do
+trabalho.
 Neste Capítulo é descrita a rede Reddit e os tópicos selecionados para a criação
 da base. Além disso, é descrita a implementação desenvolvida para a extração dos
 comentários destes tópicos.
