--- a/tcc/capitulos/capitulo3.tex
+++ b/tcc/capitulos/capitulo3.tex
@@ -16,7 +16,6 @@ usuários podem votar para cima (\textit{upvote}) ou para baixo \textit{downvote
 influenciando na posição do conteúdo no \textit{website}. Além de votar no conteúdo, seus usuários podem enviar comentários como
 forma de expressar sua opinião (Figura \ref{fig:reddit}).
 
-\newpage
 
 \begin{figure}[!htbp]
 \centering
@@ -333,8 +332,12 @@ análise de sentimentos na base de dados criada.
 \item Apresentação do TCC II.
 \end{enumerate}
 
+%loucura
+\makeatletter
+\setlength{\@fptop}{0pt}
+\makeatother
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
-\begin{table}[!htb]
+\begin{table}[ht!]
 \begin{tabularx}{0.9\textwidth}{Y|Y|Y|Y|Y|Y|Y|Y|Y|Y|Y|}
 & \multicolumn{2}{|c|}{Ago} & \multicolumn{2}{|c|}{Set} &
 \multicolumn{2}{|c|}{Out} & \multicolumn{2}{|c|}{Nov} &
