--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -1,4 +1,19 @@
-\documentclass{iiufrgs}
+\documentclass[
+	12pt,				% tamanho da fonte
+	openright,			% capítulos começam em pág ímpar (insere página vazia caso preciso)
+	twoside,			% twoside para impressão em verso e anverso. Oposto a oneside
+	a4paper,			% tamanho do papel. 
+	% -- opções do pacote babel --
+	english,			% idioma adicional para hifenização
+	french,				% idioma adicional para hifenização
+	spanish,			% idioma adicional para hifenização
+	brazil				% o último idioma é o principal do documento
+	]{abntex2}
+
+% ---
+% Pacotes básicos 
+% ---
+
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[section]{placeins}
@@ -27,84 +42,185 @@
 \usepackage{booktabs}
 \usepackage{xcolor}
 \usepackage{colortbl}
-%\usepackage[brazilian]{babel}
-\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
-\onehalfspacing
-\urlstyle{sf}
-\setdescription{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
-\setitemize{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
-\setenumerate{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
-\lstset{frame=tb,
-  language=Java,
-  aboveskip=3mm,
-  belowskip=3mm,
-  showstringspaces=false,
-  columns=flexible,
-  basicstyle={\small\ttfamily},
-  numbers=none,
-  numberstyle=\tiny\color{gray},
-  keywordstyle=\color{blue},
-  commentstyle=\color{dkgreen},
-  stringstyle=\color{red},
-  breaklines=true,
-  breakatwhitespace=true,
-  tabsize=3
+
+
+
+\usepackage{adjustbox}
+\usepackage{amsmath}
+\usepackage[printonlyused]{acronym}
+\usepackage{lmodern}			% Usa a fonte Latin Modern			
+%\usepackage{uarial}
+%\renewcommand{\familydefault}{\sfdefault}
+\usepackage[T1]{fontenc}		% Selecao de codigos de fonte.
+\usepackage[utf8]{inputenc}		% Codificacao do documento (conversão automática dos acentos)
+\usepackage{lastpage}			% Usado pela Ficha catalográfica
+\usepackage{indentfirst}		% Indenta o primeiro parágrafo de cada seção.
+\usepackage{color}				% Controle das cores
+\usepackage{graphicx}			% Inclusão de gráficos
+\usepackage{microtype} 			% para melhorias de justificação
+\usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
+\usepackage[alf]{abntex2cite}	% Citações padrão ABNT
+\usepackage[table]{xcolor}
+\usepackage{multirow}
+% --- 
+% CONFIGURAÇÕES DE PACOTES
+% --- 
+
+% ---
+% Configurações do pacote backref
+% Usado sem a opção hyperpageref de backref
+\renewcommand{\backrefpagesname}{Citado na(s) página(s):~}
+% Texto padrão antes do número das páginas
+\renewcommand{\backref}{}
+% Define os textos da citação
+\renewcommand*{\backrefalt}[4]{
+	\ifcase #1 %
+		Nenhuma citação no texto.%
+	\or
+		Citado na página #2.%
+	\else
+		Citado #1 vezes nas páginas #2.%
+	\fi}%
+% ---
+
+% ---
+% Informações de dados para CAPA e FOLHA DE ROSTO
+% ---
+\titulo{Avaliação de intermediadores de mensagens que \\ suportam o protocolo \textit{AMQP}}
+\autor{Maiki Manfro Girardi}
+\local{Caxias do Sul}
+\data{2015}
+\orientador{André Luis Martinotto}
+\coorientador{Alexandre Erasmo Krohn Nascimento}
+\instituicao{%
+UNIVERSIDADE DE CAXIAS DO SUL
+\par
+CENTRO DE COMPUTAÇÃO E TECNOLOGIA DA INFORMAÇÃO
+\par
+BACHARELADO EM CIÊNCIAS DA COMPUTAÇÃO}
+\tipotrabalho{Projeto de Diplomação}
+% O preambulo deve conter o tipo do trabalho, o objetivo, 
+% o nome da instituição e a área de concentração 
+\preambulo{Projeto de Diplomação submetido ao curso de Bacharelado em
+Ciência da Computação do Centro de Computação e Tecnologia da
+Informação da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
+% ---
+
+% alterando o aspecto da cor azul
+\definecolor{blue}{RGB}{41,5,195}
+
+% informações do PDF
+\makeatletter
+\hypersetup{
+     	%pagebackref=true,
+		pdftitle={\@title}, 
+		pdfauthor={\@author},
+    	pdfsubject={\imprimirpreambulo},
+	    pdfcreator={LaTeX with abnTeX2},
+		pdfkeywords={abnt}{latex}{abntex}{abntex2}{trabalho acadêmico}, 
+		colorlinks=true,       		% false: boxed links; true: colored links
+    	linkcolor=blue,          	% color of internal links
+    	citecolor=blue,        		% color of links to bibliography
+    	filecolor=magenta,      		% color of file links
+		urlcolor=blue,
+		bookmarksdepth=4
 }
+\makeatother
+% --- 
 
-\course{\cgcc}
-\title{O Uso de Processamento de Linguagem Natural para a Análise de
-Sentimentos na Rede Social Reddit.}
-\author{Santos Andreata}{Guilherme Henrique}
-\advisor[]{Martinotto}{André Luis}
-\location{Caxias do Sul}{}
-\bibpunct{(}{)}{;}{a}{,}{,}
+% --- 
+% Espaçamentos entre linhas e parágrafos 
+% --- 
 
+% O tamanho do parágrafo é dado por:
+\setlength{\parindent}{1.3cm}
+
+% Controle do espaçamento entre um parágrafo e outro:
+\setlength{\parskip}{0.2cm}  % tente também \onelineskip
+
+% ---
+% compila o indice
+% ---
+\makeindex
+% ---
+
+% ----
+% Início do documento
+% ----
 \begin{document}
 
-\maketitle  
+% Retira espaço extra obsoleto entre as frases.
+\frenchspacing 
 
-\begin{titlepage}
-%\setcounter{page}{2} - Inclui o número da página
-%\thispagestyle{headings}
-\vfill
+% ----------------------------------------------------------
+% ELEMENTOS PRÉ-TEXTUAIS
+% ----------------------------------------------------------
+% \pretextual
 
-\begin{center}
-{\setlength{\unitlength}{1cm}\makebox(12,6.5){\parbox[c]{12cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm\LARGE{\bf O Uso de Processamento de Linguagem Natural para a Análise de Sentimentos na
-Rede Social Reddit.}\par \normalsize por\par \large Guilherme Henrique
-Santos Andreata\par}}}
-\end{center}
+% ---
+% Capa
+% ---
+\imprimircapa
+% ---
 
-{\large Projeto de Diplomação submetido ao curso de Bacharelado em Sistemas de
-Informação da área de conhecimento de ciências exatas e engenharia, como requisito obrigatório para graduação.}
+% ---
+% Folha de rosto
+% (o * indica que haverá a ficha bibliográfica)
+% ---
+\imprimirfolhaderosto*
+% ---
 
-\vfill
+% ---
+% Inserir a ficha bibliografica
+% ---
+% \include{diversos/catalografica}
+% ---
 
-\begin{center}
-{\Large\bf Projeto de Diplomação}
-\end{center}
+% ---
+% Inserir folha de aprovação
+% ---
+%\include{diversos/aprovacao}
+% ---
 
-\vfill
+% ---
+% Dedicatória
+% ---
+%\include{diversos/dedicatoria}
+% ---
 
-\begin{singlespace}
-Orientador: {André Luis Martinotto\par}
+% ---
+% Agradecimentos
+% ---
+%\include{diversos/agradecimentos}
+% ---
 
-Banca examinadora:\par
-\hspace{1cm} {\setlength{\unitlength}{1cm}
-\makebox(9,1){\parbox[c]{9cm}{\center Daniel Luis Notari\\ CCTI/UCS}}}\par
-\hspace{1cm} {\setlength{\unitlength}{1cm}
-\makebox(9,1){\parbox[c]{9cm}{\center Helena Graziottin Ribeiro\\ CCTI/UCS}}}\par
+% ---
+% RESUMOS
+% ---
+%\include{diversos/resumos}
+% ---
 
-\vfill
+% ---
+% inserir lista de ilustrações
+% ---
 
-%\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip
-% -1.2cm Projeto de Diplomação apresentado em\\ 5 de Dezembro de 2013\par Daniel Luís Notari\\ Coordenador}}}
+\cleardoublepage
+\pdfbookmark[0]{\listfigurename}{lof}
+\listoffigures*
+\cleardoublepage
+% ---
 
-\end{singlespace}
+% ---
+% inserir lista de tabelas
+% ---
+\pdfbookmark[0]{\listtablename}{lot}
+\listoftables*
+\cleardoublepage
+% ---
 
-\end{titlepage}
-
-\tableofcontents
-
+% ---
+% inserir lista de abreviaturas e siglas
+% ---
 \chapter*{Lista de acrônimos}
 
 \vspace{20px}
@@ -119,69 +235,86 @@ Banca examinadora:\par
 \acro{SVM}[SVM]{\textit{Support Vector Machines}}
 \acro{API}[API]{\textit{Application Programming Interface}}
 \end{acronym}
-\listoffigures
-\listoftables
+\cleardoublepage
+% ---
+% inserir o sumario
+% ---
+\pdfbookmark[0]{\contentsname}{toc}
+\tableofcontents*
+\cleardoublepage
+% ---
 
-\keyword{Reddit}
-\keyword{Processamento de Linguagem Natural}
-\keyword{Análise de Sentimentos}
+% ----------------------------------------------------------
+% ELEMENTOS TEXTUAIS
+% ----------------------------------------------------------
+\textual
 
-\begin{abstract}
-
-A sociedade tem cada vez mais se expressado através de Redes
-Sociais, sendo que entre essas se destaca o
-Reddit. De fato, essa é uma das maiores redes sociais no mundo, com mais de 17
-milhões de usuários. Nesta, os usuários podem postar \textit{links}, bem como
-comentários sobre estes, gerando um grande volume de dados que muitas vezes são
-ignorados.
-
-A identificação de padrões de sentimentos expressos por grupos dessa comunidade,
-se torna útil visto que a partir dessa avaliação é possível construir
-ferramentas que podem apoiar decisões do ponto de vista político, econômico, etc. Por exemplo, a partir desta análise, é
-possível identificar a opinião dos usuários em relação a um candidato em uma eleição ou ainda a aceitação dos
-consumidores em relação a um novo produto.
-
-Assim, neste trabalho será desenvolvido um \textit{software} que permita efetuar
-a análise de sentimentos na rede social Reddit. Essa será desenvolvida
-utilizando o método de \ac{VADER}, que se encontra implementado no
-\textit{framework} \ac{NLTK}.
-
-\end{abstract}
-
-\begin{englishabstract}{}{Reddit, Natural Language Processing, Sentiment
-Analysis}
-
-The society has been increasingly expressing themselves through social networks,
-which from among those, the one who stand out is Reddit. Indeed, this is one of
-the biggest social networks in the world with more than 17 millions of users. At
-this, users can send links, as well as comment on these, generating a big volume
-of data, which a lot of times get ignored.
-
-The recognition of sentiment patterns expressed by groups of that community
-make itself useful because from that evaluation, is possible the build tools
-that can support decisions from an economic point of views, political
-point of view, etc. For an example, with that
-analysis, it is possible to identify the users's opinion regarding an election candidate or the costumers's acceptance of a new product.
-
-Therefore, in this work will be developed a software capable of performing a
-sentiment analysis on the Reddit social network. This will be developed using
-the \ac{VADER} method which is implemented by the \ac{NLTK} \textit{framework}.
-
-\end{englishabstract}
-
-\acresetall
-
-\include{capitulos/introducao}
 \include{capitulos/capitulo1}
-%\include{capitulos/capitulo2}
 \include{capitulos/capitulo3}
-%\include{capitulos/capitulo4}
-% \include{capitulos/capitulo5}
-% \include{capitulos/capitulo6}
-% \include{capitulos/capitulo7}
+
+% ----------------------------------------------------------
+% RESULTADOS
+% ----------------------------------------------------------
+%\part{Resultados}
+
+%\include{capitulos/capitulo1}
+
+% ----------------------------------------------------------
+% Finaliza a parte no bookmark do PDF
+% para que se inicie o bookmark na raiz
+% e adiciona espaço de parte no Sumário
+% ----------------------------------------------------------
+%\phantompart
+
+% ---
+% Conclusão (outro exemplo de capítulo sem numeração e presente no sumário)
+% ---
+%\chapter*[Conclusão]{Conclusão}
+%\addcontentsline{toc}{chapter}{Conclusão}
+% ---
 
 
+% ----------------------------------------------------------
+% ELEMENTOS PÓS-TEXTUAIS
+% ----------------------------------------------------------
+\postextual
+% ----------------------------------------------------------
+
+% ----------------------------------------------------------
+% Referências bibliográficas
+% ----------------------------------------------------------
+\bibliographystyle{abntex2-alf}
 \bibliography{tcc}
-\bibliographystyle{abnt}
+
+% ----------------------------------------------------------
+% Glossário
+% ----------------------------------------------------------
+%
+% Consulte o manual da classe abntex2 para orientações sobre o glossário.
+%
+%\glossary
+
+% ----------------------------------------------------------
+% Apêndices
+% ----------------------------------------------------------
+
+% ---
+% Inicia os apêndices
+% ---
+%\include{diversos/apendices}
+% ---
+
+
+% ----------------------------------------------------------
+% Anexos
+% ----------------------------------------------------------
+%\include{diversos/anexos}
+
+%---------------------------------------------------------------------
+% INDICE REMISSIVO
+%---------------------------------------------------------------------
+%\phantompart
+%\printindex
+%---------------------------------------------------------------------
 
 \end{document}
