--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -86,23 +86,23 @@
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{Avaliação de intermediadores de mensagens que \\ suportam o protocolo \textit{AMQP}}
-\autor{Maiki Manfro Girardi}
+\titulo{O Uso de Processamento de Linguagem Natural para a Análise de
+Sentimentos na Rede Social Reddit}
+\autor{Guilherme Henrique Santos Andreata}
 \local{Caxias do Sul}
-\data{2015}
+\data{2017}
 \orientador{André Luis Martinotto}
-\coorientador{Alexandre Erasmo Krohn Nascimento}
 \instituicao{%
 UNIVERSIDADE DE CAXIAS DO SUL
 \par
 CENTRO DE COMPUTAÇÃO E TECNOLOGIA DA INFORMAÇÃO
 \par
-BACHARELADO EM CIÊNCIAS DA COMPUTAÇÃO}
+BACHARELADO EM SISTEMAS DE INFORMAÇÃO}
 \tipotrabalho{Projeto de Diplomação}
 % O preambulo deve conter o tipo do trabalho, o objetivo, 
 % o nome da instituição e a área de concentração 
 \preambulo{Projeto de Diplomação submetido ao curso de Bacharelado em
-Ciência da Computação do Centro de Computação e Tecnologia da
+Sistemas de Informação do Centro de Computação e Tecnologia da
 Informação da Universidade de Caxias do Sul, como requisito obrigatório para graduação.}
 % ---
 
@@ -197,7 +197,7 @@ Informação da Universidade de Caxias do Sul, como requisito obrigatório para 
 % ---
 % RESUMOS
 % ---
-%\include{diversos/resumos}
+\include{diversos/resumos}
 % ---
 
 % ---
@@ -221,21 +221,7 @@ Informação da Universidade de Caxias do Sul, como requisito obrigatório para 
 % ---
 % inserir lista de abreviaturas e siglas
 % ---
-\chapter*{Lista de acrônimos}
-
-\vspace{20px}
-\begin{acronym}[XXXXXXXXXX]
-\acro{NLP}[NLP]{\textit{Natural Language Processing}}
-\acro{NLTK}[NLTK]{\textit{Natural Language Toolkit}}
-\acro{MaxEnt}[MaxEnt]{\textit{Maximum Entropy}}
-\acro{RNTN}[RNTN]{\textit{Recursive Neural Tensor Networks}}
-\acro{VADER}[VADER]{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
-\acro{JSON}[JSON]{\textit{JavaScript Object Notation}}
-\acro{POJO}[POJO]{\textit{Plain Old Java Objects}}
-\acro{SVM}[SVM]{\textit{Support Vector Machines}}
-\acro{API}[API]{\textit{Application Programming Interface}}
-\end{acronym}
-\cleardoublepage
+\include{diversos/acronimos}
 % ---
 % inserir o sumario
 % ---
