--- a/tcc/diversos/acronimos.tex
+++ b/tcc/diversos/acronimos.tex
@@ -1,11 +1,14 @@
-\begin{siglas}
-\item[NLP]{\textit{Natural Language Processing}}
-\item[NLTK]{\textit{Natural Language Toolkit}}
-\item[MaxEnt]{\textit{Maximum Entropy}}
-\item[RNTN]{\textit{Recursive Neural Tensor Networks}}
-\item[VADER]{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
-\item[JSON]{\textit{JavaScript Object Notation}}
-\item[POJO]{\textit{Plain Old Java Objects}}
-\item[SVM]{\textit{Support Vector Machines}}
-\item[API]{\textit{Application Programming Interface}}
-\end{siglas}
+\chapter*{Lista de acrônimos}
+
+\vspace{20px}
+\begin{acronym}[XXXXXXXXXX]
+\acro{NLP}[NLP]{\textit{Natural Language Processing}}
+\acro{NLTK}[NLTK]{\textit{Natural Language Toolkit}}
+\acro{MaxEnt}[MaxEnt]{\textit{Maximum Entropy}}
+\acro{RNTN}[RNTN]{\textit{Recursive Neural Tensor Networks}}
+\acro{VADER}[VADER]{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
+\acro{JSON}[JSON]{\textit{JavaScript Object Notation}}
+\acro{POJO}[POJO]{\textit{Plain Old Java Objects}}
+\acro{SVM}[SVM]{\textit{Support Vector Machines}}
+\acro{API}[API]{\textit{Application Programming Interface}}
+\end{acronym}
