Adicionada a Introdução que acabou ficando fora.

--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -237,7 +237,7 @@ Informação da Universidade de Caxias do Sul, como requisito obrigatório para 
 % ELEMENTOS TEXTUAIS
 % ----------------------------------------------------------
 \textual
-
+\include{capitulos/introducao}
 \include{capitulos/capitulo1}
 \include{capitulos/capitulo3}
 
